--- a/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
+++ b/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
@@ -16,27 +16,33 @@
   <!--========================================================== -->
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
-  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
-    <a class="navbar-brand" rel="home" href="#">
-      <img style="max-width:100px;"
-          src="./img/Logo/negro2.png">
-    </a>
-    <div class="container">
-      <a class="navbar-brand" href="./index.html">
-          <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
+  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('./img/banner.PNG');  height: 110px">
+      <a class="navbar-brand" rel="home" href="./Inicio">
+          <img style="max-width:100px;"
+               src="./img/Logo/negro2.png">
       </a>
-      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarSupportedContent">
-        <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-          <li class="nav-item">
-            <a class="nav-link" href="#seccion-contacto">Sistema</a>
-          </li>
-        </ul>
-        <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+      <div class="container">
+          <a class="navbar-brand" href="./Inicio">
+              <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
+          </a>
+          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+              <span class="navbar-toggler-icon"></span>
+          </button>
+          <div class="collapse navbar-collapse" id="navbarSupportedContent">
+              <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                  <li class="nav-item">
+                      <a class="nav-link" aria-current="page" href="./Mascotas-Encontradas">Mascotas</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./Inicio#intro">Sistema</a>
+                  </li>
+                  <li class="nav-item">
+                      <a class="nav-link" href="./Inicio#seccion-contacto">Contactos</a>
+                  </li>
+              </ul>
+              <a href="./Perfil/1"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+          </div>
       </div>
-    </div>
   </nav>
 <!--========================================================== -->
                         <!--TITULO-->
@@ -54,6 +60,7 @@
 
 <div id="carousel" class="carousel slide carousel-dark text-center" data-bs-ride="carousel">
   <div class="carousel-inner py-4">
+      <h1>Perros</h1>
     <!-- Single item -->
     <div class="carousel-item active">
       <div class="container">
@@ -176,66 +183,6 @@
       </div>
     </div>
 
-    <!-- Single item -->
-    <div class="carousel-item">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/Simba.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Simba</h5>
-                <p class="card-text">
-                  Descricion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/Thor.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Thor</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/Timo.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Timo</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
   </div>
   
   <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
@@ -252,6 +199,7 @@
 <div id="carouselGatos" class="carousel slide carousel-dark text-center" data-bs-ride="carousel">
   <div class="carousel-inner py-4">
     <!-- Single item -->
+      <h1>Gatos</h1>
     <div class="carousel-item active">
       <div class="container">
         <div class="row">
@@ -364,67 +312,6 @@
                 <h5 class="card-title">Figaro</h5>
                 <p class="card-text">
                   Descricion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Single item -->
-    <div class="carousel-item">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-12 mb-4 mb-lg-0">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Lucky.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Lucky</h5>
-                <p class="card-text">
-                  Descricion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Lucy.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Lucy</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 mb-4 mb-lg-0 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Zaza.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Zaza</h5>
-                <p class="card-text">
-                  Descripcion
                 </p>
                 <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
               </div>
