--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -40,7 +40,7 @@
                   <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
               </li>
           </ul>
-        <a href="perfil.hbs"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+        <a href="#"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
     </div>
   </nav>
@@ -63,7 +63,7 @@
                         <br>
                         <div class="col-sm-6 mb-3">
                             <div class="col-sm-9 text-secondary text-center">
-                                <a href="../Registrar-Mascota/{{usuario.id}}" type="button" class="btn btn-secondary px-4"  style="background-color: blueviolet;" >"Agregar Mascota"</a>
+                                <a href="../Registrar-Mascota/{{usuario.id}}" type="button" class="btn btn-secondary px-4"  style="background-color: blueviolet;" >Agregar Mascota</a>
                             </div>
                         </div>
                       </div>
