--- a/PetProject++/src/main/resources/templates/registrarMascota.hbs
+++ b/PetProject++/src/main/resources/templates/registrarMascota.hbs
@@ -89,7 +89,7 @@
                             <input type="date" class="form-control" name="fechaDeNacimiento">
                             <label for="" class="form-label ">Sexo</label>
                             <select class="form-select form-select-seguido" name="sexo">
-                                <option value="null">Desconoce</option>
+                                <option value="NULL">Desconoce</option>
                                 <option value="MACHO">Macho</option>
                                 <option value="HEMBRA">Hembra</option>
                             </select>
