--- a/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
+++ b/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
@@ -62,67 +62,7 @@
   <div class="carousel-inner py-4">
       <h1>Perros</h1>
     <!-- Single item -->
-    <div class="carousel-item active">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/Batman.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Batman</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/Coco.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Coco</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/Flofy.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Flofy</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Single item -->
+    {{#if perros}}
     {{#each perros}}
     <div class="carousel-item {{#if active}}active{{/if}}">
       <div class="container">
@@ -141,7 +81,7 @@
                 <p class="card-text">
                   {{mascota.descripcionFisica}}
                 </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
+                <a href="./{{formId}}" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
               </div>
             </div>
           </div>
@@ -150,7 +90,9 @@
       </div>
     </div>
     {{/each}}
-
+    {{else}}
+        <h2>En este momento no tenemos perros en adopción!</h2>
+    {{/if}}
   </div>
   
   <button class="carousel-control-prev" type="button" data-bs-target="#carousel"  data-bs-slide="prev">
@@ -166,128 +108,39 @@
 
 <div id="carouselGatos" class="carousel slide carousel-dark text-center" data-bs-ride="carousel">
   <div class="carousel-inner py-4">
-    <!-- Single item -->
       <h1>Gatos</h1>
-    <div class="carousel-item active">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Albondiga.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Albondiga</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
+      <!-- Single item -->
+      {{#if gatos}}
+      {{#each gatos}}
+          <div class="carousel-item {{#if active}}active{{/if}}">
+              <div class="container">
+                  <div class="row">
+                      {{#each mascotaFoto}}
+                          <div class="col-lg-4 col-md-12">
+                              <div class="card">
+                                  <img
+                                          src="data:image/png;base64,{{foto}}"
+                                          class="card-img-top"
+                                          alt="..."
+                                          height="300"
+                                  />
+                                  <div class="card-body">
+                                      <h5 class="card-title">{{mascota.nombre}}</h5>
+                                      <p class="card-text">
+                                          {{mascota.descripcionFisica}}
+                                      </p>
+                                      <a href="./{{formId}}" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
+                                  </div>
+                              </div>
+                          </div>
+                      {{/each}}
+                  </div>
               </div>
-            </div>
           </div>
-
-          <div class="col-lg-4 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Alex.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Alex</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Bolt.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Bolt</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-
-    <!-- Single item -->
-    <div class="carousel-item">
-      <div class="container">
-        <div class="row">
-          <div class="col-lg-4 col-md-12">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Cosmo.png"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Cosmo</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Era.jpeg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Era</h5>
-                <p class="card-text">
-                  Descripcion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-
-          <div class="col-lg-4 d-none d-lg-block">
-            <div class="card">
-              <img
-                src="./img/MascotasAdopcion/gatos/Figaro.jpg"
-                class="card-img-top"
-                alt="..."
-                height="300"
-              />
-              <div class="card-body">
-                <h5 class="card-title">Figaro</h5>
-                <p class="card-text">
-                  Descricion
-                </p>
-                <a href="#!" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
+      {{/each}}
+      {{else}}
+          <h2>En este momento no tenemos gatos en adopción!</h2>
+      {{/if}}
   </div>
   
   <button class="carousel-control-prev" type="button" data-bs-target="#carouselGatos"  data-bs-slide="prev">
