--- a/PetProject++/src/main/resources/templates/mascotaPerdidaByID.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdidaByID.hbs
@@ -56,7 +56,7 @@
         <h1>Mascota Perdida</h1>
         <div class="row mt-4">
             <div class="col-12">
-                <form action="../forms/mascotaPerdida" method="post" class="border-top border-2 border-dark" enctype="multipart/form-data" id="form">
+                <form action="../forms/mascotaPerdida/{{mascota.id}}" method="post" class="border-top border-2 border-dark" enctype="multipart/form-data" id="form">
                     <h3 class="mt-4">Datos de Personales</h3>
                     <div class="row">
                         <div class="col-6">
