--- a/PetProject++/src/main/resources/templates/detalle-mascota-encontrada.hbs
+++ b/PetProject++/src/main/resources/templates/detalle-mascota-encontrada.hbs
@@ -8,7 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/main.css">
 
     <title>Diseño de sistemas</title>
   </head>
@@ -16,10 +16,10 @@
   <!--========================================================== -->
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
-  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
+  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('../img/banner.PNG');  height: 110px">
     <a class="navbar-brand" rel="home" href="../Inicio">
       <img style="max-width:100px;"
-          src="./img/Logo/negro2.png">
+          src="../img/Logo/negro2.png">
     </a>
     <div class="container">
       <a class="navbar-brand" href="../Inicio">
@@ -34,7 +34,7 @@
             <a class="nav-link" href="../Inicio#intro">Sistema</a>
           </li>
         </ul>
-        <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+        <a href="../Perfil/1"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
     </div>
   </nav>
@@ -57,25 +57,29 @@
       <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred.jpg" class="d-block w-100" height="400"  alt="">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred.jpg" class="d-block w-100" height="400"  alt="">
           </div>
-          
+        {{#each fotos}}
+          <div class="carousel-item" data-bs-interval="3000">
+            <img src="data:image/png;base64,{{this}}" class="d-block w-100" height="400" alt="...">
+          </div>
+        {{/each}}
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred1.jpg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred1.jpg" class="d-block w-100" height="400" alt="...">
           </div>
     
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred2.jpg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred2.jpg" class="d-block w-100" height="400" alt="...">
           </div>
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred3.jpg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred3.jpg" class="d-block w-100" height="400" alt="...">
           </div>
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred4.jpeg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred4.jpeg" class="d-block w-100" height="400" alt="...">
           </div>
     
         </div>
@@ -92,32 +96,19 @@
         <div class="col-sm">
           <div class="container">
             <div class="row">
-                Descripcion: Tenia un collar rojo con el nombre Alfred
+                Descripcion: {{formMascotaPerdida.descripcion}} {{formMascotaPerdida.lugarEncuentroMascota.calle}}
             </div>
             <div class="row">
-                Ubicacion: Encontrado en Villa Lugano, aula 4 de la UTN clase de sintaxis
+                Ubicacion: Encontrado en {{formMascotaPerdida.direccion.departamento}}, {{formMascotaPerdida.direccion.ciudad.nombre}}
             </div>
             <div class="row">
-                Especie: Perro
+                Especie: {{formMascotaPerdida.especie}}
             </div>
-            <div class="row">
-                Edad: Joven
-            </div>
-            <div class="row">
-                Raza: Beagle
-            </div>
-            <div class="row">
-                Color: Blanco/Marron
-            </div>
-            <div class="row">
-                Castrado: No Informa
-            </div>
-            <div class="row">
-                Sexo: Macho
-            </div>
-            <div class="row">
-                Tamaño: Mediano
-            </div>
+            {{#each formMascotaPerdida.caracteristicas}}
+                <div class="row">
+                    {{tipoCaracteristica.descripcion}}: {{valor}}
+                </div>
+            {{/each}}
             <div class="row">
               <br>
             </div>
@@ -152,6 +143,6 @@
     <!-- Option 1: Bootstrap Bundle with Popper -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
-    <script src="main.js"></script>
+    <script src="../main.js"></script>
   </body>
 </html>
