contactar con rescatista (no anda el botón todavia)

--- a/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
+++ b/PetProject++/src/main/resources/templates/mascotas-encontradas.hbs
@@ -370,7 +370,7 @@
         <div class="titulo">
           <h3>Mensaje para Rescatista</h3>
         </div>
-        <form action="" class="form">
+        <form action="/mascotaEncontrada/{id}" method="post" class="form">
           <div class="textArea">
             <textarea class="form-control" aria-label="With textarea" cols="40" rows="5" placeholder="redacte su mensaje"></textarea>
           </div>
