--- a/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
+++ b/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
@@ -22,7 +22,7 @@
                src="./img/Logo/negro2.png">
       </a>
       <div class="container">
-          <a class="navbar-brand" href="./Inicio">
+          <a class="navbar-brand" href="../Inicio">
               <span class="fs-5 text-dark fw-bold">Rescate De Patitas</span>
           </a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,13 +31,13 @@
           <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                   <li class="nav-item">
-                      <a class="nav-link" aria-current="page" href="./Mascotas-Encontradas">Mascotas</a>
+                      <a class="nav-link" aria-current="page" href="../Mascotas-Encontradas">Mascotas</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./Inicio#intro">Sistema</a>
+                      <a class="nav-link" href="../Inicio#intro">Sistema</a>
                   </li>
                   <li class="nav-item">
-                      <a class="nav-link" href="./Inicio#seccion-contacto">Contactos</a>
+                      <a class="nav-link" href="../Inicio#seccion-contacto">Contactos</a>
                   </li>
               </ul>
               <a href="./Perfil/1"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
