--- a/PetProject++/src/main/resources/templates/detalle-mascota-encontrada.hbs
+++ b/PetProject++/src/main/resources/templates/detalle-mascota-encontrada.hbs
@@ -8,18 +8,19 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
-    <link rel="stylesheet" href="./css/main.css">
-
+    <link rel="stylesheet" href="../css/main.css">
+     <link rel="stylesheet" href="../css/modal.css">
+    <script src="../js/mascotas-encontradas.js"></script>
     <title>Diseño de sistemas</title>
   </head>
   <body>
   <!--========================================================== -->
                         <!-- ENCABEZADO -->
   <!--========================================================== -->
-  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('img/banner.PNG');  height: 110px">
+  <nav class="navbar navbar-expand-lg navbar-light p-3"  id="menu" style="background-image: url('../img/banner.PNG');  height: 110px">
     <a class="navbar-brand" rel="home" href="../Inicio">
       <img style="max-width:100px;"
-          src="./img/Logo/negro2.png">
+          src="../img/Logo/negro2.png">
     </a>
     <div class="container">
       <a class="navbar-brand" href="../Inicio">
@@ -34,7 +35,7 @@
             <a class="nav-link" href="../Inicio#intro">Sistema</a>
           </li>
         </ul>
-        <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
+        <a href="perfil.html"class="nav-item nav-link" aria-expanded="false"><img src="../img/Avatar/avatar-gato.png" class="avatar" alt="Avatar" height="50" width="50"><b class="fs-5 text-dark fw-bold">Tom Hanks</b></a>
       </div>
     </div>
   </nav>
@@ -42,7 +43,7 @@
                         <!--TITULO-->
 <!--========================================================== -->
 <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
-    <h1 class="p-3 fs-2 border-top border-3">Mascota Encontrada el 25/05/2021</h1> 
+    <h1 class="p-3 fs-2 border-top border-3">Mascota Encontrada el 25/05/2021</h1>
 </section>
 <!--========================================================== -->
                         <!--GALLERIA-->
@@ -57,25 +58,25 @@
       <div id="carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <div class="carousel-item active" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred.jpg" class="d-block w-100" height="400"  alt="">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred.jpg" class="d-block w-100" height="400"  alt="">
           </div>
           
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred1.jpg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred1.jpg" class="d-block w-100" height="400" alt="...">
           </div>
     
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred2.jpg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred2.jpg" class="d-block w-100" height="400" alt="...">
           </div>
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred3.jpg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred3.jpg" class="d-block w-100" height="400" alt="...">
           </div>
     
           <div class="carousel-item" data-bs-interval="3000">
-            <img src="./img/MascotasEncontradas/perros/Alfred/Alfred4.jpeg" class="d-block w-100" height="400" alt="...">
+            <img src="../img/MascotasEncontradas/perros/Alfred/Alfred4.jpeg" class="d-block w-100" height="400" alt="...">
           </div>
     
         </div>
@@ -91,32 +92,30 @@
       </div>
         <div class="col-sm">
           <div class="container">
+             <div class="row">
+                Mascota encontrada por: {{formMascotaPerdida.nombre}}
+             </div>
             <div class="row">
-                Descripcion: Tenia un collar rojo con el nombre Alfred
+                Descripcion: {{formMascotaPerdida.descripcion}}
             </div>
             <div class="row">
                 Ubicacion: Encontrado en Villa Lugano, aula 4 de la UTN clase de sintaxis
             </div>
             <div class="row">
-                Especie: Perro
+                Especie: {{formMascotaPerdida.sexo}}
             </div>
             <div class="row">
-                Edad: Joven
+                Edad:
             </div>
+             <div class="row">
+                Encontrada en:
+             </div>
             <div class="row">
-                Raza: Beagle
-            </div>
-            <div class="row">
-                Color: Blanco/Marron
-            </div>
-            <div class="row">
-                Castrado: No Informa
-            </div>
-            <div class="row">
-                Sexo: Macho
-            </div>
-            <div class="row">
-                Tamaño: Mediano
+                    {{#each formMascotaPerdida.mascota.caracteristicas}}
+                           <div class="row">
+                              {{tipoCaracteristica.nombre}} : {{valor}}
+                           </div>
+                     {{/each}}
             </div>
             <div class="row">
               <br>
@@ -130,7 +129,7 @@
     <div class="col-sm">
     </div>
     <div class="col-sm">
-      <button type="button" class="btn btn-secondary" style="background-color: blueviolet;">Contactar con rescatista</button>
+      <button type="button" class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()" >Contactar rescatista</button>
     </div>
   </div>
   <br>
@@ -153,5 +152,30 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="main.js"></script>
+
+         <div class="pop-up verModal" id='popUp'>
+        <div class="pop-wrap">
+          <div class="pop-mensaje">
+            <div class="salir">
+              <div class="sal-mod" onclick="salir()">
+                <p>x</p>
+              </div>
+
+            </div>
+            <div class="titulo">
+              <h3>Mensaje para Rescatista</h3>
+            </div>
+            <form action="../mascotaEncontrada/{id}" method="post" class="form">
+              <div class="textArea">
+                <textarea class="form-control" aria-label="With textarea" cols="40" rows="5" placeholder="Redacte su mensaje"></textarea>
+              </div>
+              <div class="boton">
+                <button type="button" class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()">enviar</button>
+              </div>
+
+            </form>
+          </div>
+        </div>
+      </div>
   </body>
 </html>
