--- a/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
+++ b/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
@@ -9,6 +9,8 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.4.0/font/bootstrap-icons.css">
     <link rel="stylesheet" href="./css/main.css">
+    <link rel="stylesheet" href="../css/modal.css">
+    <script src="../js/mascotas-encontradas.js"></script>
 
     <title>Diseño de sistemas</title>
   </head>
@@ -81,7 +83,8 @@
                 <p class="card-text">
                   {{mascota.descripcionFisica}}
                 </p>
-                <a href="./{{formId}}" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
+                  <a href="../Adopcion-de-Mascotas/{{formId}}" class="btn btn-secondary" style="background-color: blueviolet;">Detalles</a>
+                  <button type="button" class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()" >Contactar dueño</button>
               </div>
             </div>
           </div>
@@ -129,7 +132,8 @@
                                       <p class="card-text">
                                           {{mascota.descripcionFisica}}
                                       </p>
-                                      <a href="./{{formId}}" class="btn btn-secondary" style="background-color: blueviolet;">Adoptar</a>
+                                      <a href="../Adopcion-de-Mascotas/{{formId}}" class="btn btn-secondary" style="background-color: blueviolet;">Detalles</a>
+                                      <button type="button" class="btn btn-secondary" style="background-color: blueviolet;" onclick="enviarMensaje()" >Contactar duenio</button>
                                   </div>
                               </div>
                           </div>
@@ -169,5 +173,32 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/js/bootstrap.bundle.min.js" integrity="sha384-b5kHyXgcpbZJO/tY9Ul7kGkf1S0CWuKcCD38l8YkeH8z8QjE0GmW1gYU5S9FOnJ0" crossorigin="anonymous"></script> 
     <script src="https://unpkg.com/typewriter-effect@latest/dist/core.js"></script>
     <script src="main.js"></script>
+
+       <div class="pop-up verModal" id='popUp'>
+        <div class="pop-wrap">
+          <div class="pop-mensaje">
+            <div class="salir">
+              <div class="sal-mod" onclick="salir()">
+                <p>x</p>
+              </div>
+
+            </div>
+            <div class="titulo">
+              <h3>Mensaje para dueño actual de la mascota</h3>
+            </div>
+            <form action="../forms/darEnAdopcion/{{formMascotaPerdida.id}}" method="post" class="form">
+              <div class="textArea">
+                <textarea class="form-control" aria-label="With textarea" cols="40" rows="5" placeholder="Redacte su mensaje" name="input" id='input'></textarea>
+              </div>
+              <div class="boton">
+                <button type="submit" class="btn btn-secondary" style="background-color: blueviolet;">Enviar</button>
+              </div>
+
+            </form>
+          </div>
+        </div>
+      </div>
+
+
   </body>
 </html>
