--- a/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
+++ b/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
@@ -79,6 +79,9 @@
                             <label for="calle" class="form-label">Departamento, Municipio o Comuna</label>
                             <input type="text" class="form-control" name="direccion.departamento">
                         </div>
+
+                        <label for="descripcion" class="form-label" style="margin-top: 10px;">Descripcion</label>
+                        <textarea class="form-control ml-1 mr-1" name="descripcion" id="descripcion"></textarea>
                     </div>
 
                     <div class="row mt-3">
