--- a/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
+++ b/PetProject++/src/main/resources/templates/adopcion-mascotas.hbs
@@ -51,6 +51,9 @@
 <!--========================================================== -->
 <section class="d-flex flex-column justify-content-center align-items-center pt-5  text-center w-50 m-auto" id="intro">
   <h1 class="p-3 fs-2 border-top border-3">Adopcion de Mascotas</h1>
+    <div class="col-sm-9 text-secondary">
+        <input  type="button" class="btn btn-danger" onclick="quieroAdoptar()" value="Quiero Adoptar una Mascota">
+    </div>
   </section>
 
 <!--========================================================== -->
