--- a/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
+++ b/PetProject++/src/main/resources/templates/mascotaPerdida.hbs
@@ -219,7 +219,7 @@
                                 <div class="col-6">
                                     <label for="sexo" class="form-label ">Sexo</label>
                                     <select class="form-select" name="sexo" id="sexo">
-                                        <option value="null">Desconoce</option>
+                                        <option value="NULL">Desconoce</option>
                                         <option value="MACHO">Macho</option>
                                         <option value="HEMBRA">Hembra</option>
                                     </select>
@@ -264,18 +264,18 @@
                                 {{#each caracteristicas}}
                                     <div class="row">
                                         <div class="col-4">
-                                            <label for="" class="form-label">{{descripcion}}</label>
+                                            <label for="{{descripcion}}" class="form-label">{{descripcion}}</label>
                                         </div>
                                         <div class="col-7">
                                             {{#if opciones}}
-                                                <select class="form-select form-select-seguido" name="{{descripcion}}">
+                                                <select id="{{descripcion}}" class="form-select form-select-seguido" name="{{descripcion}}">
                                                     <option value="">Desconoce</option>
                                                 {{#each opciones}}
                                                     <option value="{{valor}}">{{valor}}</option>
                                                 {{/each}}
                                                 </select>
                                             {{else}}
-                                                <input type="text" class="form-control" name="{{descripcion}}">
+                                                <input id="{{descripcion}}" type="text" class="form-control" name="{{descripcion}}">
                                             {{/if}}
                                         </div>
                                     </div>
