--- a/PetProject++/src/main/resources/templates/perfil.hbs
+++ b/PetProject++/src/main/resources/templates/perfil.hbs
@@ -206,8 +206,8 @@
                   <h3>Codigo QR de la mascota</h3>
                 </div>
                       <img
-                       <!--src="data:image/png;base64,{{mascota.1.fotos}}"-->
-                      src="../img/Avatar/avatar-gato.png"
+                      src="data:image/png;base64,{{mascota.qr}}"
+                      <!--src="../img/Avatar/avatar-gato.png"-->
                       class="card-img-top"
                       alt="..."
                       height="300"
