--- a/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
+++ b/PetProject++/src/main/resources/templates/pantallaAdmin2.hbs
@@ -90,7 +90,7 @@
                             <input type="text" class="form-control" name="sizeFoto">
                         </div>
                         <div class="col-6">
-                            <h3>agregar vonluntario</h3>
+                            <h3>Agregar voluntario</h3>
                             <label for="" class="form-label ">Mail del voluntario</label>
                             <div class="input-group ">
                                 <input type="text" class="form-control mb-0" placeholder="Ej.: nombre@gmail.com" aria-label="Recipient's username" aria-describedby="button-addon2">
