--- a/PetProject++/src/main/resources/templates/pantallaAdmin.hbs
+++ b/PetProject++/src/main/resources/templates/pantallaAdmin.hbs
@@ -67,7 +67,7 @@
                 <div class="row ">
                     <div class="col-12 d-flex justify-content-center">
                         <div class="inputBusqueda">
-                            <input type="text" class="form-control " placeholder="Serch">
+                            <input type="text" class="form-control " placeholder="Search">
                         </div>
                         <div class="lupa">
                             <a href="">
